--- a/src/ProductTable/ProductTable.css
+++ b/src/ProductTable/ProductTable.css
@@ -8,7 +8,7 @@
   /* Layout */
   width: 100%;
   display: grid;
-  grid-template-columns: 10rem 12rem auto 8rem;
+  grid-template-columns: 10rem 12rem auto 12rem;
   column-gap: 1rem;
   align-items: center;
 
@@ -16,6 +16,7 @@
   background-color: white;
   height: 8rem;
   max-height: 8rem;
+  padding: 0 10px;
   /* transition: background-color 0.1s linear; */
 }
 
@@ -41,14 +42,58 @@
   justify-content: flex-start;
   align-items: flex-start;
 }
+.ProductTable_Column_Price {
+  flex:1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .ProductTable_Column_PriceButton {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  border-radius: 3px;
+  padding: 8px 15px;
   font-size: 1.3rem;
+  cursor: pointer;
+  width: max-content;
+
+  border: 1px solid transparent;
+  transition: all 0.1s ease-out;
+}
+
+.ProductTable_Column_PriceButton:active {
+  transform: scale(0.97);
+}
+
+.ProductTable__Row:hover .ProductTable_Column_PriceButton:hover {
+  /* border-color: rgb(224 224 224); */
+  /* text-decoration: underline; */
+  background-color: #b7b7b726;
+}
+
+.ProductTable_Column_PriceButton_Icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 12px;
+  opacity: 0;
+  transform: scale(0.5);
+  transform-origin: center;
+  transition: all 0.1s ease-out;
+  color: #0f5b99;
+}
+
+.ProductTable__Row:hover .ProductTable_Column_PriceButton_Icon {
+  opacity: 1;
+  transform: scale(1.5);
 }
 
 .ProductTable_Logo_PH {
   color: rgb(211, 211, 211);
   flex: 1;
-  margin: 20px 10px;
+  margin: 20px 10px 20px 0;
   border-radius: 10px;
   background: linear-gradient(to bottom right, #9e9e9e, #f45c43);
 
@@ -83,4 +128,7 @@
 .ProductTable__CoverItem--Link:hover {
   text-decoration: underline;
   text-decoration-color: #0f5b99;
+}
+.ProductTable__CoverItem--Link:active {
+  /* opacity: 0.3; */
 }
