--- a/src/ProductTable/ProductTableFilledCovers.css
+++ b/src/ProductTable/ProductTableFilledCovers.css
@@ -29,7 +29,8 @@
 }
 .ProductTable__FilledCoverItem--Link:active {
   /* text-decoration: underline; */
-  transform: scale(0.96);
+  /* transform: scale(0.96); */
+  opacity: 0.3;
   transform-origin: bottom;
   text-decoration-color: #0f5b99;
 }
