--- a/src/ProductTable/ProductTable.css
+++ b/src/ProductTable/ProductTable.css
@@ -95,7 +95,7 @@
   flex: 1;
   margin: 20px 10px 20px 0;
   border-radius: 10px;
-  background: linear-gradient(to bottom right, #9e9e9e, #f45c43);
+  background: linear-gradient(to bottom right, #9e9e9e, #438af4);
 
   display: flex;
   justify-content: center;
